add an alert that the code has been rewritten

--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,10 @@
         <br>
         <div id="shorten-page">
             <form id="shorten-form" autocomplete="off">
+                <div class="alert alert-success">
+                    we've reconsidered yeeturl and the code has been rewritten. your links are now more secure, never expire and everything under the hood has been simplified, making the website less prone to issues. please report any bugs, as we probably introduced some. enjoy!
+                </div>
+                <br>
                 <label for="inputLink">Link</label>
                 <input type="url" class="form-control shadow" id="inputLink" required="true">
                 <br>
