--- a/web/index.html
+++ b/web/index.html
@@ -46,6 +46,7 @@
             </form>
             <br>
             <p id="result"></p>
+            <p class="text-muted"><small><a href="https://github.com/SpheeresX/yeeturl-desktop">yeeturl for your terminal</a></small></p>
         </div>
 
         <!-- Will be shown if a hash (ex. #8cffe9/hAio.1) is present. Our JS will take care of the content (see yeeturl.js). -->
