remove unused variable

--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
         <div id="shorten-page">
             <form id="shorten-form" autocomplete="off">
                 <div class="alert alert-success">
-                    we've reconsidered yeeturl and the code has been rewritten. your links are now more secure, never expire and everything under the hood has been simplified, making the website less prone to issues. please report any bugs, as we probably introduced some. enjoy!
+                    yeeturl is now being hosted by replit. their domains are pretty long for a url shortener so you can use <b>yeeturl.github.io</b> instead and you'll be redirected here. As part of this, our privacy policy has changed to include the new third-parties (replit, github) we rely on to provide yeeturl to you.
                 </div>
                 <br>
                 <label for="inputLink">Link</label>
