--- a/src/404.html
+++ b/src/404.html
@@ -6,10 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'self'">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="yeeturl is a privacy-respecting and end-to-end encrypted URL shortener that cannot read any of your URLs.">
-    <!-- The purged CSS removes a lot of bloat found in Bootstrap and only
-         keeps what's needed for the page to work. Replace "purged" with
-         "original" if you see that the page is breaking when modifying the UI. -->
-    <link rel="stylesheet" href="/css/bootstrap-dark.purged.min.css">
+    <link rel="stylesheet" href="all.css" inline>
 </head>
 
 <body>
