document and break the api, fix a spelling mistake

--- a/src/404.html
+++ b/src/404.html
@@ -15,7 +15,7 @@
         <h1>
             <code id="logo">yeeturl</code>
         </h1>
-        <p class="text-muted">A end-to-end encrypted URL shortener. <a href="privacy.txt" target="__blank">Read the ToS and Privacy Policy</a></p>
+        <p class="text-muted">An end-to-end encrypted URL shortener. <a href="privacy.txt" target="__blank">Read the ToS and Privacy Policy</a></p>
         <hr>
         <p>404! Page not found. <a href="/">Go back</a></p>
     </div>
