--- a/src/index.html
+++ b/src/index.html
@@ -16,15 +16,11 @@
         <h1>
             <code id="logo">yeeturl</code>
         </h1>
-        <p class="text-muted">A end-to-end encrypted URL shortener. <a href="privacy.txt" target="__blank">Read the ToS and Privacy Policy</a></p>
+        <p class="text-muted">An end-to-end encrypted URL shortener. <a href="privacy.txt" target="__blank">Read the ToS and Privacy Policy</a></p>
         <noscript>You need to enable JavaScript to use this website (because we can't securely encrypt/decrypt URLs otherwise).</noscript>
         <br>
         <div id="shorten-page">
             <form id="shorten-form" autocomplete="off">
-                <div class="alert alert-success">
-                    yeeturl is now being hosted by replit. their domains are pretty long for a url shortener so you can use <b>yeeturl.github.io</b> instead and you'll be redirected here. As part of this, our privacy policy has changed to include the new third-parties (replit, github) we rely on to provide yeeturl to you.
-                </div>
-                <br>
                 <label for="inputLink">Link</label>
                 <input type="url" class="form-control shadow" id="inputLink" required="true">
                 <br>
