show how many short urls yeeturl is serving

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <h1>
             <code id="logo">yeeturl</code>
         </h1>
-        <p class="text-muted">An end-to-end encrypted URL shortener. <a href="privacy.txt" target="__blank">Read the ToS and Privacy Policy</a></p>
+        <p class="text-muted">An end-to-end encrypted URL shortener<span id="urlCount"></span>. <a href="privacy.txt" target="__blank">Read the ToS and Privacy Policy</a></p>
         <noscript>You need to enable JavaScript to use this website (because we can't securely encrypt/decrypt URLs otherwise).</noscript>
         <br>
         <div id="shorten-page">
@@ -38,7 +38,7 @@
             </form>
             <br>
             <p id="result"></p>
-            <p class="text-muted"><small><a href="https://github.com/SpheeresX/yeeturl-desktop">yeeturl for your terminal</a></small></p>
+            <p class="text-muted"><small>yeeturl for your <a href="https://github.com/SpheeresX/yeeturl-desktop">terminal</a> &middot; <a href="https://github.com/SpheeresX/yeeturl-desktop-python">desktop</a> | <a href="https://github.com/SpheeresX/yeeturl-server">source code</a></small></p>
         </div>
 
         <!-- Will be shown if a hash (ex. #8cffe9/hAio.1) is present. Our JS will take care of the content (see yeeturl.js). -->
