prune the node_modules folder when building the cli app

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="url shortener, yeeturl, privacy, e2ee">
     <meta name="description" content="yeeturl is a privacy-respecting and end-to-end encrypted URL shortener that cannot read any of your URLs.">
-    <link rel="stylesheet" href="all.css" inline>
+    <link rel="stylesheet" href="all.css">
 </head>
 
 <body>
