--- a/src/404.html
+++ b/src/404.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'self'">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="yeeturl is a privacy-respecting and end-to-end encrypted URL shortener that cannot read any of your URLs.">
-    <link rel="stylesheet" href="all.css" inline>
+    <link rel="stylesheet" href="all.css">
 </head>
 
 <body>
