minor changes, make remove-id.js work (untested)

--- a/src/404.html
+++ b/src/404.html
@@ -5,7 +5,7 @@
     <meta charset="utf8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'self'">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="yeeturl is a privacy-respecting and end-to-end encrypted URL shortener that cannot read any of your URLs.">
+    <meta name="description" content="yeeturl is a privacy-respecting and end-to-end encrypted URL shortener that cannot read any URLs.">
     <link rel="stylesheet" href="all.css">
 </head>
 
@@ -17,7 +17,7 @@
         </h1>
         <p class="text-muted">An end-to-end encrypted URL shortener. <a href="privacy.txt" target="__blank">Read the ToS and Privacy Policy</a></p>
         <hr>
-        <p>404! Page not found. <a href="/">Go back</a></p>
+        <p>Page not found. <a href="/">Go back</a></p>
     </div>
 </body>
 </html>
