--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' 'unsafe-inline'; style-src 'self'; connect-src 'self';">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="url shortener, yeeturl, privacy, e2ee">
-    <meta name="description" content="yeeturl is a privacy-respecting and end-to-end encrypted URL shortener that cannot read any of your URLs.">
+    <meta name="description" content="yeeturl is a privacy-respecting and end-to-end encrypted URL shortener that cannot read any URLs.">
     <link rel="stylesheet" href="all.css">
 </head>
 
@@ -48,7 +48,7 @@
 
     <script>
         /*
-         lazy-load our javascript files so that the page will be already
+         lazy-load our javascript so that the page will be already
          visible (and partially usable) while things are still being loaded
         */
         window.onload = () => {
