add an actual privacy policy, cache node modules

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <h1>
             <code id="logo">yeeturl</code>
         </h1>
-        <p class="text-muted">An end-to-end encrypted URL shortener<span id="urlCount"></span>. <a href="privacy.txt" target="__blank">Read the ToS and Privacy Policy</a></p>
+        <p class="text-muted">An end-to-end encrypted URL shortener<span id="urlCount"></span>. <a href="privacy.html">ToS and Privacy Policy</a></p>
         <noscript>You need to enable JavaScript to use this website (because we can't securely encrypt/decrypt URLs otherwise).</noscript>
         <br>
         <div id="shorten-page">
