remove the privacy task from gulpfile, redirect privacy.txt to privacy.html, make the new privacy policy less vague

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -33,7 +33,7 @@
         <p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with
             regards to the information that they shared and/or collect on yeeturl. This policy is not applicable to any
             information collected offline or via channels other than this website.</p>
-        
+
         <p>Minor changes (e.g. typo fixes) to this file will be done without notice, but you'll be notified of any remarkable changes.</p>
 
         <h3>Consent</h3>
@@ -42,8 +42,7 @@
 
         <h3>Information we collect</h3>
 
-        <p>The personal information that you are asked to provide, and the reasons why you are asked to provide it, will
-            be made clear to you at the point we ask you to provide your personal information.</p>
+        <p>The information we collect include your encrypted links.</p>
         <p>If you contact us directly, we may receive additional information about you such as your name, email address,
             the contents of the message and/or attachments you may send us, and any other information you may choose to
             provide.</p>
@@ -62,10 +61,10 @@
 
         <p>yeeturl follows a standard procedure of using log files. These files log visitors when they visit websites.
             The information collected by log files include API requests (link shortens and such). These are not linked
-            to any personal information nor let us identify the target location of short links. The purpose of the information is for finding and
-            preventing fraud.</p>
+            to any personal information nor let us identify the target location of short links. The purpose of the information is for detecting and
+            preventing abuse.</p>
 
-        <hr> <!------------------------------------------------------------------->
+        <hr> <!---------------------------------------------------------------->
 
         <h1>Terms of Service</h1>
         <ul>
@@ -75,7 +74,7 @@
         </ul>
         <p>Please contact us if you'd like to report any content.</p>
 
-        <hr> <!------------------------------------------------------------------->
+        <hr> <!---------------------------------------------------------------->
 
         <h1>Other</h1>
         <ul>
